syntax = "proto3";

package user;

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message UserId {
  string id = 1;
}

message UserList {
  repeated User users = 1;
}


message Empty {}

service UserService {
  rpc CreateUser (User) returns (User);
  rpc GetUser (Empty) returns (UserList);
  rpc DeleteUser (UserId) returns (Empty);
}
